# SaraKIT

./: README.md
Alexa/: README.md
Alexa/AVS/: .gitignore
Alexa/AVS/KWD/: CMakeLists.txt
Alexa/AVS/KWD/Porcupine/: CMakeLists.txt
Alexa/AVS/KWD/Porcupine/src/: CMakeLists.txt  PorcupineKeywordDetector.cpp
Depth/: README.md  depth sample.py
FaceDetection/: README.md
FaceDetection/libs/: mnn_20211215-1_arm64.deb
FaceDetection/src/: MNN_UltraFace.cpp  Makefile  facedetector.cpp
GoogleAsistant/libs/include/: ares.h
GoogleAsistant/src/: Audio.cpp  GoogleAssistant.cpp  GoogleAssistant.hpp  Makefile  sampleAssistant.cpp
LineFollower/: linefollower.py
RCcar/: rc.py  speed.py
RCcar/views/: index.tpl
SoundLocator/: README.md  install.sh
SoundLocator/src/: HbiCtrl.cpp  HbiCtrl.hpp  Makefile  soundLocator.cpp
VoiceCommand/src/: Audio.hpp  CJSONPost.cpp  CJSONPost.hpp  GoogleSpeech.cpp  GoogleSpeech.hpp  KeywordActionManager.cpp  KeywordActionManager.hpp  Makefile  voiceCommand.cpp
Windmill/: README.md
Windmill/src/: Gtracker.cpp  Gtracker.hpp  Makefile  windmill.cpp
ZL38063_driver/: .gitignore  Makefile  NOTICE.txt  README.md  asound.conf  config.mk  lic.sh
ZL38063_driver/apps/: avs_kit.patch  mscc_fw_loader
ZL38063_driver/apps/python/: MiTuner_socket_server.py  hbi_example_code.py  hbi_load_firmware.py  tw_firmware_converter.py
ZL38063_driver/vproc_sdk/: Makefile  Makefile.globals  insm.sh  install.sh  readme  sample_config.txt
ZL38063_driver/vproc_sdk/docs/: readme
ZL38063_driver/vproc_sdk/include/: zl380xx_tw.h
(+405 files in other folders)
